# resume-tailor

./: .gitignore  README.md  env.example  pyproject.toml
src/resume_tailor/: cli.py  jd_parser.py  log.py  models.py  resume_builder.py  tailor_agent.py
templates/: resume.tex
tests/fixtures/: sample_jd.txt
