[project]
name = "resume-tailor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.0.0",
    "typer>=0.12.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
js = ["playwright>=1.40.0"]

[project.scripts]
tailor = "resume_tailor.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
